--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 {% include base_path %}
 
 <meta charset="utf-8">
-
+<meta name="google-site-verification" content="-FHiN7DAaASxOzmpuZg--klwJnyFw6N8pJ0McVUxB0M" />
 {% include seo.html %}
 
 <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
