--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,3 +1,4 @@
+<div id="instafeed"></div>
 <script type="text/javascript" src="/assets/js/instafeed.js"></script>
 <script type="text/javascript">
     var feed = new Instafeed({
@@ -8,4 +9,3 @@
     });
     feed.run();
 </script>
-<div id="instafeed">
