--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,11 +1,2 @@
-<div id="instafeed"></div>
-<script type="text/javascript" src="/assets/js/instafeed.js"></script>
-<script type="text/javascript">
-    var feed = new Instafeed({
-        get: 'user',
-        userId: '',
-        clientId: '',
-        accessToken: ''
-    });
-    feed.run();
-</script>
+<figure data-behold-id="9kAXlqJxQdIUSTushz9v"></figure>
+<script src="https://w.behold.so/widget.js" type="module"></script>
