--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,1 +1,1 @@
-<script src="https://bibbase.org/show?bib=https://dblp.org/pid/289/6042.bib&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib=https://dblp.org/pid/289/6042.bib&fullnames=1&jsonp=1"></script>
