--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,1 +1,1 @@
-<script src="https://bibbase.org/show?bib=https://dblp.org/pid/289/6042.bib&jsonp=1&theme=side&folding=0&fullnames=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2FMaoZiming%2FMaoZiming.github.io%2Fmaster%2F_includes%2Fziming.bib&commas=true&jsonp=1&theme=side&folding=0&fullnames=1"></script>
