--- a/_includes/instagram.html
+++ b/_includes/instagram.html
@@ -1,2 +1,2 @@
-<figure data-behold-id="9kAXlqJxQdIUSTushz9v"></figure>
+<figure data-behold-id="NsV3zM5izI0AhCQPkoyC"></figure>
 <script src="https://w.behold.so/widget.js" type="module"></script>
